Moved data folder to the folder containing the executable (was in ProgramData). Added appPath setting to support reverse proxy servers, and configured request routing to be fairly tolerant of situations where the appPath is or is not used as configured. Fixed a few outdated serverside variable references in Default.html.

--- a/TODO.txt
+++ b/TODO.txt
@@ -30,3 +30,5 @@
 * Consider: Add an event stream which notifies browsers of new events and of changes made to events.  This is probably hard to do correctly, but would be extremely helpful.
 
 * Add GUI for showing events similar to the current event based on HashValue strings.
+
+* Customizable Server Name
