Authenticated session idle limit increased from 10 minutes to 1.5 days. The system name "Error Tracker" can now be changed in Admin > Settings. Fixed path creation by FilterActions, which was broken. After moving events manually, the toast message now includes the path of the destionation folder. VSvg and SvgButton components will now show the content of their title prop in a tooltip.

--- a/TODO.txt
+++ b/TODO.txt
@@ -32,3 +32,14 @@
 * Add GUI for showing events similar to the current event based on HashValue strings.
 
 * Customizable Server Name
+
+* UNDO stack.
+	* Maybe with confirmation (if no REDO stack)
+	* With context menu items.
+	* By hotkey.
+	* Toast notification.
+
+* Consider: REDO stack
+	* With context menu items.
+	* By hotkey.
+	* Toast notification.
