Added a "Browse" button to FilterAction.vue when editing a "move event to" action. Updated SelectFolderDialog method. Modified FolderBrowser and FolderNode components to understand when they are in a dialog and modify behavior appropriately.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+* Toggle showing unique events (only latest per HashValue).
+
 * Email Configuration
 	* Consider: Email Notifications of new events
 	* Consider: Email Notifications of new events (daily summary)
