--- a/ErrorTrackerServer/Properties/Resources.resx
+++ b/ErrorTrackerServer/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="ProjectSetup_7_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Database\Project\SQL\7\ProjectSetup_7_1.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="ProjectSetup_8_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Database\Project\SQL\8\ProjectSetup_8_1.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
