--- a/ErrorTrackerServer/Properties/Resources.resx
+++ b/ErrorTrackerServer/Properties/Resources.resx
@@ -142,4 +142,7 @@
   <data name="ProjectSetup_8_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Database\Project\SQL\8\ProjectSetup_8_1.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="ProjectSetup_9_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Database\Project\SQL\9\ProjectSetup_9_1.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
